[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
name = "paperlinter"
version = "0.2.1"
description = "Checks for common mistakes in LaTeX source files of scientific papers"
keywords = ["LaTeX", "TeX", "linter", "paper"]
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Michael Schwarz"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
paperlinter = "src.paperlint:main"

[project.urls]
Homepage = "https://github.com/misc0110/Paper-Linter/"

[tool.setuptools.packages.find]
include = ["src"]
